backend/api/tests/integration/snapshots/integration__jig__browse_own_simple.snap
---
source: tests/integration/jig.rs
expression: body
---
{
  "jigs": [
    {
      "id": "0cc084bc-7c83-11eb-9f77-e3218dffb008",
      "publishedAt": "2022-06-24T17:57:33.149359Z",
      "creatorId": "1f241e1b-b537-493f-a230-075cb16315be",
      "authorId": "1f241e1b-b537-493f-a230-075cb16315be",
      "authorName": "Bobby Tables",
      "likes": 0,
      "plays": 0,
      "liveUpToDate": false,
      "jigData": {
        "createdAt": "2021-03-04T00:46:26.134651Z",
        "lastEdited": "[last_edited]",
        "draftOrLive": "draft",
        "displayName": "name",
        "modules": [
          {
            "id": "a6b24a06-1dd7-11ec-8426-635a3a7ea572",
            "kind": "Cover",
            "is_complete": false
          },
          {
            "id": "a6b24a42-1dd7-11ec-8426-a7165f9281a2",
            "kind": "Flashcards",
            "is_complete": false
          },
          {
            "id": "a6b24a88-1dd7-11ec-8426-57525d09b22c",
            "kind": "Memory",
            "is_complete": false
          }
        ],
        "ageRanges": [],
        "affiliations": [],
        "language": "en",
        "categories": [],
        "additionalResources": [
          {
            "id": "286b834a-1dd9-11ec-8426-6f641a50e23f",
            "displayName": "link test",
            "resourceTypeId": "a91aca34-519e-11ec-ab46-175eaaf1ff23",
            "link": "url://url.url.url/urls/s"
          },
          {
            "id": "286b8390-1dd9-11ec-8426-fbeb80c504d9",
            "displayName": "link test",
            "resourceTypeId": "a91aca34-519e-11ec-ab46-175eaaf1ff23",
            "link": "url://url.url.url/url/s"
          }
        ],
        "description": "test description",
        "defaultPlayerSettings": {
          "direction": "ltr",
          "displayScore": true,
          "trackAssessments": true,
          "dragAssist": true
        },
        "theme": "Blank",
        "audioBackground": null,
        "audioEffects": {
          "feedbackPositive": "[audio]",
          "feedbackNegative": "[audio]"
        },
        "privacyLevel": "unlisted",
        "locked": false,
        "otherKeywords": "",
        "translatedKeywords": "",
        "translatedDescription": {}
      },
      "adminData": {
        "rating": null,
        "blocked": false,
        "curated": false
      }
    },
    {
      "id": "19becb2b-bff7-4c1b-bb2c-16f2e098d3d3",
      "publishedAt": "2022-06-22T17:57:33.149359Z",
      "creatorId": "1f241e1b-b537-493f-a230-075cb16315be",
      "authorId": "1f241e1b-b537-493f-a230-075cb16315be",
      "authorName": "Bobby Tables",
      "likes": 0,
      "plays": 0,
      "liveUpToDate": false,
      "jigData": {
        "createdAt": "2021-03-04T00:46:26.134651Z",
        "lastEdited": "[last_edited]",
        "draftOrLive": "live",
        "displayName": "name",
        "modules": [
          {
            "id": "865eeae6-f081-49bb-87bb-827296a8a82b",
            "kind": "Cover",
            "is_complete": true
          }
        ],
        "ageRanges": [],
        "affiliations": [],
        "language": "en",
        "categories": [],
        "additionalResources": [],
        "description": "test description",
        "defaultPlayerSettings": {
          "direction": "ltr",
          "displayScore": true,
          "trackAssessments": true,
          "dragAssist": true
        },
        "theme": "Blank",
        "audioBackground": null,
        "audioEffects": {
          "feedbackPositive": "[audio]",
          "feedbackNegative": "[audio]"
        },
        "privacyLevel": "public",
        "locked": false,
        "otherKeywords": "",
        "translatedKeywords": "",
        "translatedDescription": {}
      },
      "adminData": {
        "rating": null,
        "blocked": false,
        "curated": false
      }
    },
    {
      "id": "3a71522a-cd77-11eb-8dc1-af3e35f7c743",
      "publishedAt": "2022-06-23T17:57:33.149359Z",
      "creatorId": "1f241e1b-b537-493f-a230-075cb16315be",
      "authorId": "1f241e1b-b537-493f-a230-075cb16315be",
      "authorName": "Bobby Tables",
      "likes": 0,
      "plays": 0,
      "liveUpToDate": false,
      "jigData": {
        "createdAt": "2021-03-06T00:46:26.134651Z",
        "lastEdited": "[last_edited]",
        "draftOrLive": "draft",
        "displayName": "draft name",
        "modules": [],
        "ageRanges": [],
        "affiliations": [],
        "language": "he",
        "categories": [],
        "additionalResources": [],
        "description": "draft test description",
        "defaultPlayerSettings": {
          "direction": "rtl",
          "displayScore": false,
          "trackAssessments": false,
          "dragAssist": false
        },
        "theme": "Jigzi",
        "audioBackground": "funForKids",
        "audioEffects": {
          "feedbackPositive": "[audio]",
          "feedbackNegative": "[audio]"
        },
        "privacyLevel": "unlisted",
        "locked": false,
        "otherKeywords": "",
        "translatedKeywords": "",
        "translatedDescription": {}
      },
      "adminData": {
        "rating": null,
        "blocked": false,
        "curated": false
      }
    },
    {
      "id": "3a71522a-cd77-11eb-8dc1-af3e35f7c743",
      "publishedAt": "2022-06-23T17:57:33.149359Z",
      "creatorId": "1f241e1b-b537-493f-a230-075cb16315be",
      "authorId": "1f241e1b-b537-493f-a230-075cb16315be",
      "authorName": "Bobby Tables",
      "likes": 0,
      "plays": 0,
      "liveUpToDate": false,
      "jigData": {
        "createdAt": "2021-03-04T00:46:26.134651Z",
        "lastEdited": "[last_edited]",
        "draftOrLive": "live",
        "displayName": "name",
        "modules": [],
        "ageRanges": [],
        "affiliations": [],
        "language": "en",
        "categories": [],
        "additionalResources": [],
        "description": "test description",
        "defaultPlayerSettings": {
          "direction": "ltr",
          "displayScore": true,
          "trackAssessments": true,
          "dragAssist": true
        },
        "theme": "Blank",
        "audioBackground": null,
        "audioEffects": {
          "feedbackPositive": "[audio]",
          "feedbackNegative": "[audio]"
        },
        "privacyLevel": "public",
        "locked": false,
        "otherKeywords": "",
        "translatedKeywords": "",
        "translatedDescription": {}
      },
      "adminData": {
        "rating": null,
        "blocked": false,
        "curated": false
      }
    }
  ],
  "pages": 1,
  "totalJigCount": 4
}
