backend/api/tests/integration/snapshots/integration__jig__clone-1.snap
---
source: tests/integration/jig.rs
expression: body
---
{
  "id": "[id]",
  "publishedAt": null,
  "creatorId": "1f241e1b-b537-493f-a230-075cb16315be",
  "authorId": "1f241e1b-b537-493f-a230-075cb16315be",
  "authorName": "Bobby Tables",
  "likes": 0,
  "plays": 0,
  "liveUpToDate": false,
  "jigData": {
    "createdAt": "2021-03-06T00:46:26.134651Z",
    "lastEdited": "[last_edited]",
    "draftOrLive": "draft",
    "displayName": "draft name",
    "modules": [],
    "ageRanges": [],
    "affiliations": [],
    "language": "he",
    "categories": [],
    "additionalResources": "[ids]",
    "description": "draft test description",
    "defaultPlayerSettings": {
      "direction": "rtl",
      "scoring": false,
      "dragAssist": false
    },
    "theme": "Jigzi",
    "audioBackground": "funForKids",
    "audioEffects": {
      "feedbackPositive": [],
      "feedbackNegative": []
    },
    "privacyLevel": "unlisted",
    "locked": false,
    "otherKeywords": "",
    "translatedKeywords": "",
    "translatedDescription": {}
  },
  "isLiked": false,
  "adminData": {
    "rating": null,
    "blocked": false,
    "curated": false,
    "premium": false
  }
}
