backend/api/tests/integration/snapshots/integration__jig__clone.snap
---
source: tests/integration/jig.rs
expression: body

---
{
  "id": "[id]",
  "publishedAt": null,
  "creatorId": "1f241e1b-b537-493f-a230-075cb16315be",
  "authorId": "1f241e1b-b537-493f-a230-075cb16315be",
  "authorName": "Bobby Tables",
  "likes": 0,
  "plays": 0,
  "jigFocus": "modules",
  "draftOrLive": "draft",
  "displayName": "draft name",
  "modules": [],
  "ageRanges": [],
  "affiliations": [],
  "language": "he",
  "categories": [],
  "additionalResources": "[ids]",
  "description": "draft test description",
  "lastEdited": "[last_edited]",
  "defaultPlayerSettings": {
    "direction": "rtl",
    "displayScore": false,
    "trackAssessments": false,
    "dragAssist": false
  },
  "theme": "Jigzi",
  "audioBackground": "funForKids",
  "audioEffects": {
    "feedbackPositive": [],
    "feedbackNegative": []
  },
  "privacyLevel": "unlisted",
  "locked": false,
  "otherKeywords": "",
  "translatedKeywords": "",
  "translatedDescription": {},
  "adminData": {
    "rating": null,
    "blocked": false,
    "curated": false
  }
}
