backend/api/tests/integration/snapshots/integration__jig__create_default-2.snap
---
source: tests/integration/jig.rs
expression: body
---
{
  "id": "[id]",
  "publishedAt": null,
  "creatorId": "1f241e1b-b537-493f-a230-075cb16315be",
  "authorId": "1f241e1b-b537-493f-a230-075cb16315be",
  "authorName": "Bobby Tables",
  "likes": 0,
  "plays": 0,
  "liveUpToDate": false,
  "jigData": {
    "createdAt": "[created_at]",
    "lastEdited": "[last_edited]",
    "draftOrLive": "draft",
    "displayName": "",
    "modules": [],
    "ageRanges": [],
    "affiliations": [],
    "language": "",
    "categories": [],
    "additionalResources": [],
    "description": "",
    "defaultPlayerSettings": {
      "direction": "ltr",
      "scoring": false,
      "dragAssist": false
    },
    "theme": "Blank",
    "audioBackground": null,
    "audioEffects": {
      "feedbackPositive": "[audio]",
      "feedbackNegative": "[audio]"
    },
    "privacyLevel": "unlisted",
    "locked": false,
    "otherKeywords": "",
    "translatedKeywords": "",
    "translatedDescription": {}
  },
  "isLiked": false,
  "adminData": {
    "rating": null,
    "blocked": false,
    "curated": false,
    "premium": false
  }
}
