backend/api/tests/integration/snapshots/integration__jig__create_default-3.snap
---
source: tests/integration/jig.rs
expression: body
---
{
  "id": "[id]",
  "publishedAt": null,
  "creatorId": "1f241e1b-b537-493f-a230-075cb16315be",
  "authorId": "1f241e1b-b537-493f-a230-075cb16315be",
  "authorName": "Bobby Tables",
  "likes": 0,
  "plays": 0,
  "jigFocus": "modules",
  "jigData": {
    "createdAt": "[created_at]",
    "lastEdited": "[last_edited]",
    "draftOrLive": "live",
    "displayName": "",
    "modules": [],
    "ageRanges": [],
    "affiliations": [],
    "language": "en_US",
    "categories": [],
    "additionalResources": [],
    "description": "",
    "defaultPlayerSettings": {
      "direction": "ltr",
      "displayScore": false,
      "trackAssessments": false,
      "dragAssist": false
    },
    "theme": "Blank",
    "audioBackground": null,
    "audioEffects": {
      "feedbackPositive": "[audio]",
      "feedbackNegative": "[audio]"
    },
    "privacyLevel": "unlisted",
    "locked": false,
    "otherKeywords": "",
    "translatedKeywords": "",
    "translatedDescription": {}
  },
  "adminData": {
    "rating": null,
    "blocked": false,
    "curated": false
  }
}
