backend/api/tests/integration/snapshots/integration__jig__get-2.snap
---
source: tests/integration/jig.rs
expression: body
---
{
  "id": "0cc084bc-7c83-11eb-9f77-e3218dffb008",
  "publishedAt": "2022-06-24T17:57:33.149359Z",
  "creatorId": "1f241e1b-b537-493f-a230-075cb16315be",
  "authorId": "1f241e1b-b537-493f-a230-075cb16315be",
  "authorName": "Bobby Tables",
  "likes": 0,
  "plays": 0,
  "liveUpToDate": false,
  "jigData": {
    "createdAt": "2021-03-04T00:46:26.134651Z",
    "lastEdited": "[last_edited]",
    "draftOrLive": "live",
    "displayName": "name",
    "modules": [
      {
        "id": "a6b248f8-1dd7-11ec-8426-975953035335",
        "kind": "Cover",
        "is_complete": false
      },
      {
        "id": "a6b24970-1dd7-11ec-8426-57136b411853",
        "kind": "Flashcards",
        "is_complete": false
      },
      {
        "id": "a6b249c0-1dd7-11ec-8426-f77e58fd17c6",
        "kind": "Memory",
        "is_complete": false
      }
    ],
    "ageRanges": [],
    "affiliations": [],
    "language": "en",
    "categories": [],
    "additionalResources": [
      {
        "id": "286b828c-1dd9-11ec-8426-571b03b2d3df",
        "displayName": "link test",
        "resourceTypeId": "a91aca34-519e-11ec-ab46-175eaaf1ff23",
        "link": "url://url.url.url/urlese"
      },
      {
        "id": "286b82fa-1dd9-11ec-8426-2b6953011bae",
        "displayName": "link test",
        "resourceTypeId": "a91aca34-519e-11ec-ab46-175eaaf1ff23",
        "link": "url://url.url.url/url"
      }
    ],
    "description": "test description",
    "defaultPlayerSettings": {
      "direction": "ltr",
      "displayScore": true,
      "trackAssessments": true,
      "dragAssist": true
    },
    "theme": "Blank",
    "audioBackground": null,
    "audioEffects": {
      "feedbackPositive": "[audio]",
      "feedbackNegative": "[audio]"
    },
    "privacyLevel": "public",
    "locked": false,
    "otherKeywords": "",
    "translatedKeywords": "",
    "translatedDescription": {}
  },
  "isLiked": false,
  "adminData": {
    "rating": null,
    "blocked": false,
    "curated": false,
    "premium": false
  }
}
