backend/api/tests/integration/snapshots/integration__jig__live_up_to_date_flag-1.snap
---
source: tests/integration/jig.rs
expression: body
---
{
  "id": "19becb2b-bff7-4c1b-bb2c-16f2e098d3d3",
  "publishedAt": "2022-06-22T17:57:33.149359Z",
  "creatorId": "1f241e1b-b537-493f-a230-075cb16315be",
  "authorId": "1f241e1b-b537-493f-a230-075cb16315be",
  "authorName": "Bobby Tables",
  "likes": 0,
  "plays": 0,
  "liveUpToDate": false,
  "jigData": {
    "createdAt": "2021-03-04T00:46:26.134651Z",
    "lastEdited": "[last_edited]",
    "draftOrLive": "draft",
    "displayName": "name",
    "modules": [
      {
        "id": "56841805-d762-478b-8f07-e263917058b9",
        "stable_id": "b415f5f6-c5f7-11ee-9569-53a033ff93b8",
        "kind": "Cover",
        "is_complete": true
      }
    ],
    "ageRanges": [],
    "affiliations": [],
    "language": "en",
    "categories": [],
    "additionalResources": [],
    "description": "test description",
    "defaultPlayerSettings": {
      "direction": "ltr",
      "displayScore": true,
      "trackAssessments": true,
      "dragAssist": true
    },
    "theme": "Blank",
    "audioBackground": null,
    "audioEffects": {
      "feedbackPositive": "[audio]",
      "feedbackNegative": "[audio]"
    },
    "privacyLevel": "unlisted",
    "locked": false,
    "otherKeywords": "",
    "translatedKeywords": "",
    "translatedDescription": {}
  },
  "isLiked": false,
  "adminData": {
    "rating": null,
    "blocked": false,
    "curated": false,
    "premium": false
  }
}
